# Prism

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  client.py  docker-compose.yml  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py  tournament_history.csv
.huggingface/: app.yaml
backend/: curriculum.py  environment.py  icl_trainer.py  llm_router.py  reward.py  rubric.py  server.py  state.py
envs/: __init__.py
history/: 006da4d5-a44f-4332-82f1-b18998d92092.json  06a50285-7d3e-449f-8ede-1fcaf5025f09.json  0e527764-dd09-4fd1-81a7-6cba7cdfd328.json  15a6b04a-e7cd-4030-a720-5430a9bd3e91.json  227a9772-336c-451d-8f55-58ce029f02e2.json  30284a10-16bd-4699-97ed-c689262dc303.json  37a23f5a-b949-41a9-b7cd-aedab05f677e.json  40819f22-6e99-4524-bdb9-a83985f47cd1.json  4efcc1cb-1512-4fd9-9f9a-88d891a587c4.json  5d23a125-8c32-4237-8039-10de710a23d8.json  623f4d44-a2fa-47d3-b359-d6a12a07902f.json  7207d312-0d79-4b76-89e3-aca9209922b6.json  72ead291-76b3-4935-a359-cf71c68abd64.json  7f0b7cc8-baa2-47f2-92f8-9efcc8441098.json  8a47714b-fa62-459f-944c-7d4b8b878bf4.json  8da2c324-b511-4bb8-af5a-2b44cc0f3eaa.json  bbf755e0-342f-4a51-9844-8c5b369923b4.json  be8be943-ef21-4c6a-89a5-d733991f8ee0.json  d2528784-86a2-4126-a152-db435c9bb982.json  d6d936c1-64ae-4ca9-b91d-4c08799a87b9.json  f54cf327-dd9b-49b1-aae8-422539db624e.json  f7bb87b6-1257-4aec-bea8-9bc5c03267ce.json  icl_history.json
scratch/: test_server.py
training/: benchmark.py  colab_train.ipynb  evaluate.py  generate_curves.py  generate_evidence.py  grpo_train.py  tournament.py  (+2 more)
(+49 files in other folders)
